# POM8

./: README.md
.github/: CODE_OF_CONDUCT.md
documentation/handbook/: adressing_modes.adoc  architecture_overview.adoc  assembly_syntax.adoc  dev_environment_setup.adoc  index.adoc  instruction_set_overview.adoc
rtl/: pom8_alu.vhd  pom8_cu.vhd  pom8_data_memory.vhd  pom8_gpio_controller.vhd  pom8_instruction_memory.vhd  pom8_memory_map_conf.vhd  pom8_reg_file.vhd  pom8_regfile.vhd  pom8_reset_synchroniser.vhd  pom8_stack_pointer.vhd  pom8_status_register.vhd  pom8_top.vhd
rtl/primitives/: pomegranate_PC_prim.vhd  pomegranate_counter_reg_prim.vhd  pomegranate_reg_prim.vhd
sw/: POM8_Assembler.py
sw/Assembler/: README.md  logger_conf.py  pom8_assembler.py  pom8_parser.py  pom8_token.py  pom8_tokeniser.py  pyproject.toml
sw/Assembler/samples/: add5_bin.txt  fibonacci_bin.txt  pwm_led_breathe_bin.txt  test_asm_no_errors.asm
sw/Assembler/src/POM8_Assembler/: __main__.py  assembler.py  logger_conf.py  parser.py  pom8_token.py
sw/Assembler/tests/: test_assembler.py  test_parser.py  test_tokenisation.py
sw/Examples/: add5.asm  fibonacci.asm  pwm_led_breathe.asm  pwm_led_breathe.txt
tb/: pom8_top_tb.vhd
